--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -24,11 +24,11 @@ i{
 
 :root{
     --nav-color: rgb(229, 245, 247 , 0.3 );
-    --main-color: #ff3333;
+    --main-color: #0c7689;
     --second-color: #f5f6fa;
     --blue-color: #3298dc;
     --green-color: #00d1b2;
-    --red-color:#f14668;
+    --red-color:#0f8ca1;
     --borderB: 2px solid #eee;
     --main-grid: repeat(auto-fill, minmax(200px, 1fr));
     --second-grid: repeat(auto-fill, minmax(280px, 1fr));
@@ -44,11 +44,11 @@ i{
     box-shadow: inset 0 0 6px var(--second-color);
 }
 *::-webkit-scrollbar-thumb {
-    background-color: #ff3333;
+    background-color: #0c7689;
     border-radius: 5px;
 }
 :root {
-    scrollbar-color: #ff3333 var(--second-color) !important;
+    scrollbar-color: #0c7689 var(--second-color) !important;
     scrollbar-width: thin !important;
 }
 
@@ -97,6 +97,10 @@ nav{
 footer img {
     width: 140px;
 }
+.licens a {
+    color: var(--main-color);
+    font-weight: bold;
+}
 .location {
     margin-top: 10px;
 }
@@ -122,7 +126,7 @@ footer img {
     height: 42px;
     background-color: #e9eff5;
     text-align: center;
-    margin: 15px 0 0 20px;
+    margin: 15px 0 0 10px;
     line-height: 42px;
     border-radius: 5px;
     transition: 0.5s;
@@ -169,12 +173,12 @@ footer img {
     background-size: cover;
     background-position: center center;
     padding: 0rem 0px 8rem;
-    box-shadow: rgba(15, 3, 3, 0.9) 0px 0px 0px 1000px inset;
+    box-shadow: rgba(3, 14, 15, 0.9) 0px 0px 0px 1000px inset;
     margin-top: 50px;
 }
 .Home_hero video{
     border-radius: 20px;
-    box-shadow: rgba( 255, 51, 51, 0.2) 0px 8px 50px;
+    box-shadow: rgba(0, 134, 115, 0.25) 0px 44px 74px;
 }
 .Home_hero .hero-sub{
     margin-top: 3rem !important;
@@ -195,7 +199,7 @@ footer img {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    box-shadow: rgba(15, 3, 3, 0.9) 0px 0px 0px 1000px inset;
+    box-shadow: rgba(3, 14, 15, 0.9) 0px 0px 0px 1000px inset;
 }
 .features .gridSys.c2 {
     display: grid;
@@ -207,7 +211,7 @@ footer img {
     margin: auto;
     padding: 50px 15%;
     border-radius: 20px;
-    box-shadow: rgba(255, 0, 0, 0.2) 0px 44px 74px;
+    box-shadow: rgba(0, 134, 115, 0.4) 0px 44px 74px;
 }
 .features .gridSys.c4{
     grid-template-columns: repeat(auto-fill, minmax(260px, 3fr));
@@ -275,8 +279,25 @@ video {
 }
 .hero .about{
     border-radius: 20px;
-    border: 1px solid var(--main-color);
-    box-shadow: rgba(255, 0, 0, 0.25) 0px 0px 40px;
+    border: 2px solid var(--main-color);
+    box-shadow: rgba(0, 238, 255, 0.5) 0px 0px 40px;
+}
+.hero-body > div:nth-child(1) .about{
+    border: 2px solid #75305d;
+    box-shadow: rgba(244, 30, 160, 0.5) 0px 0px 40px;
+}
+.hero-body > div:nth-child(1) .about .button {
+    background-color: #75305d !important;
+    border-color: #75305d !important;
+}
+.hero-body > div:nth-child(1) .about .button:hover {
+    background-color: #75305dcc !important;
+}
+.hero-body > div:nth-child(1) .about .proimge {
+    border-color: #75305d;
+}
+.hero-body > div:nth-child(1) .about .is-red {
+    color: #75305d !important;
 }
 .about:first{
     background-image: url(../images/bg1.jpg);
@@ -288,14 +309,10 @@ video {
 }
 .logocont {
     padding: 50px 20px;
-    background-image: url("/assets/images/logo.png");
+    background-image: url("/assets/images/logo3.png");
     background-repeat: no-repeat;
     background-position: center;
-    /* temp */
-    box-shadow: rgba(19, 4, 4, 0.65) 0px 0px 0px 1000px inset;
-}
-.logocont p{
-    color: rgb(231, 231, 231) !important
+    background-size: contain;
 }
 .twoTeachers {
     margin-top: 0;
@@ -396,7 +413,7 @@ video {
     margin-bottom: 2rem !important;
     margin-top: 4rem !important;
     border-bottom: 2px solid var(--main-color);
-    box-shadow: rgba(15, 3, 3, 0.9) 0px 0px 0px 1000px inset;
+    box-shadow: rgba(3, 14, 15, 0.9) 0px 0px 0px 1000px inset;
 }
 .nomarg{
     margin-top: 20px;
@@ -706,7 +723,7 @@ video {
     opacity: 0.7;
 }
 .isrT{
-    color: var(--main-color) !important;
+    color: #ff3333 !important;
     opacity: 0.7;
 }
 .iswT{
@@ -745,8 +762,8 @@ video {
 }
 .notification.notifications.noti1 {
     background-color: #fff !important;
-    border: 2px solid var(--main-color) !important;
-    color: var(--main-color) !important;
+    border: 2px solid #ff3333 !important;
+    color: #ff3333 !important;
     box-shadow: rgb(255, 237, 237) 0px 0px 0px 1000px inset;
 }
 .notification.notifications.noti2 {
@@ -757,8 +774,8 @@ video {
 }
 .notification.notifications.noti3 {
     background-color: #fff !important;
-    border: 2px solid var(--green-color) !important;
-    color: var(--green-color) !important;
+    border: 2px solid #0c7689 !important;
+    color: #0c7689 !important;
     box-shadow: rgb(233, 255, 246) 0px 0px 0px 1000px inset;
 }
 
@@ -942,7 +959,7 @@ video {
     border-width: 2px;
 }
 .button:hover{
-    background-color: #ff2b2b8a !important;
+    background-color: #0c7689b5 !important;
     border-color: var(--main-color) !important;
 }
 .time{
@@ -975,7 +992,7 @@ video {
     height: 100%;
     width: 100%;
     top: 0;
-    background-color: #2d121266;
+    background-color: #122d2d66;
     z-index: -100;
     position: fixed;
     opacity: 0;
@@ -1170,8 +1187,8 @@ input::placeholder{
     margin-bottom: 50px;
 }
 .pagesCount p {
-    background-color: var(--third-color);
-    color: var(--fourth-color);
+    background-color: var(--main-color);
+    color: #fff;
     border-radius: 5px;
     min-width: 40px;
     min-height: 40px;
@@ -1184,5 +1201,6 @@ input::placeholder{
 }
 .pagesCount p.active {
     opacity: 0.98;
-    background-color: var(--fourth-color);
+    background-color: var(--red-color);
+    color: #fff;
 }
