--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -1028,6 +1028,17 @@ video {
     .quizs .ques{
         max-height: 300px;
     }
+
+    .footer .column.is-7 {
+        border-left: 0;
+        padding-left: 0;
+        margin-left: .75rem;
+    }
+
+    .card {
+        margin-right: 0 !important;
+        margin-left: 0 !important;
+    }
 }
 
 @media (max-width: 680px){
@@ -1049,6 +1060,20 @@ video {
     }
 }
 
+@media (max-width: 580px){
+    .panel-block {
+        display: flex;
+        flex-direction: column;
+    }
+    .panel-block *{
+        width: 100%;
+        margin-bottom: 5px;
+    }
+    .panel .select{
+        margin-right: 0 !important;
+    }
+}
+
 @media (max-width: 440px){
     .Home_hero .buttons-cont {
         margin-right: -20px;
@@ -1062,14 +1087,22 @@ video {
         padding-left: 10px;
         padding-right: 1px;
     }
-    
+    .about .content1 a {
+        min-width: 260px;
+        margin-left: 0;
+    }
 }
 
-/* @media (max-width:400px){
-    .befored::after, .befored::before{
-        display: none;
-    } 
-} */
+@media (max-width:1024px){
+    .container.block.c2, .features .gridSys.c4, .features .gridSys.c6{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .panel, .Cards1.block.Lects.alects {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+}
 
 
 
